--- a/hello.html
+++ b/hello.html
@@ -3,6 +3,13 @@
   <head>
     <meta charset="utf-8">
     <title>Mex Rap</title>
+    <style>
+    h1 {
+      color: #CD5C5C;
+      text-align: center;
+    }
+
+    </style>
   </head>
   <body>
     <h1>MexRap</h1>
@@ -15,7 +22,6 @@
       <li>Te ire a buscar</li>
       <li>Cuidando el territorio</li>
     </ul>
-
 
 
   </body>
